EX-4362: fix zooming problem and hide the horizontal scroll bar on freshtab

--- a/subprojects/fresh-tab-frontend/app/styles/freshtab.scss
+++ b/subprojects/fresh-tab-frontend/app/styles/freshtab.scss
@@ -185,7 +185,8 @@ body.freshTabContainer {
 
   /* containers */
   #center {
-    width: 100%;
+    width: calc(100% - 74px);
+    padding-right: 74px;
     display: flex;
     align-items: flex-start;
     justify-items: center;
